<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL_Telescope" Id="{a7572ab9-17bf-4e0d-b71f-e76e531b6203}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	// BT9 mirror
	temperature_mirror2		AT%I*: INT;
	// BT10
	temperature_mirror1		AT%I*: INT;

	//DOUT6 0.5
	brake_azimuth_eve	AT%Q*: BOOL;
	
	// DIN28 3.3 (absolute)
	azimut_limit_switch	AT%I*: BOOL;
	
	// DIN35 4.2
	cover2_open		AT%I*: BOOL;
	// DIN36 4.3
	cover2_closed	AT%I*: BOOL;
	// DIN37 4.4
	cover3_open		AT%I*: BOOL;
	// DIN38 4.5
	cover3_closed	AT%I*: BOOL;

	//DOUT14 1.5
	focus_unlock		AT%Q*: BOOL;
	//DOUT15 4.6
	nasmyth_lock	AT%Q*: BOOL;
	//Horn 4.7
	horn			AT%Q*: BOOL;
	
	
	// digital inputs for limit switches
	Elevation_inputs		AT%I*: WORD;
	// diagnostic number
	Elevation_diagnostic	AT%I*: UDINT;
	// torque feedback
	Elevation_torque		AT%I*: INT;
	
	// digital inputs for limit switches
	Azimuth_inputs			AT%I*: WORD;
	// diagnostic number
	Azimuth_diagnostic		AT%I*: UDINT;
	// torque feedback
	Azimuth_torque			AT%I*: INT;
	
	// azimuth axis interface
	AzimuthAxisRef: 	AXIS_REF;
	// elevation axis interface
	ElevationAxisRef: 	AXIS_REF;
	
	open_cover1		AT%Q*: BOOL;
	close_cover1	AT%Q*: BOOL;
	open_cover2		AT%Q*: BOOL;
	close_cover2	AT%Q*: BOOL;
	open_cover3		AT%Q*: BOOL;
	close_cover3	AT%Q*: BOOL;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>